fix: 위치 기반 앨범api 수정사항 반영, 문서화
